--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
-    "time-require": "^0.1.2"
+    "time-require": "^0.1.2",
+    "yargs": "^14.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
