--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "main": "gulpfile.js",
   "devDependencies": {
     "@bdchauvette/gulp-prettier": "^2.0.0",
+    "browser-sync": "^2.26.7",
     "gulp": "3.9.1",
-    "prettier": "^1.16.4",
+    "gulp-imagemin": "^6.1.1",
+    "gulp-jshint": "^2.1.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "jshint": "^2.10.2",
     "lodash": ">=4.17.13",
     "lodash.template": ">=4.5.0",
-    "minimatch": ">=3.0.2"
+    "minimatch": ">=3.0.2",
+    "node-sass": "^4.12.0",
+    "prettier": "^1.16.4"
   },
   "dependencies": {
+    "autoprefixer": "^9.6.4",
+    "postcss-cli": "^6.1.3",
     "time-require": "^0.1.2",
     "yargs": "^14.0.0"
   },
